# ChessBot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_ui.cpp
board/: bitboard.cpp  bitboard.h  bitboard.impl  board.cpp  board.h  figure_type.cpp  figure_type.h  figures.cpp  figures.h  hash.cpp  hash.h  hash.impl  move.cpp  move.h  pos.cpp  pos.h  position.cpp  position.h
bot/: analuzer.h  analyzer.cpp  analyzer.h  bot.cpp  bot.h  legal_moves.cpp  legal_moves.h  moves.cpp  moves.h  moves_sorted.h  moves_sorter.cpp  stepper.cpp  stepper.h  visited_states.cpp  visited_states.h
figures/: all.h  bishop.cpp  bishop.h  empty.cpp  empty.h  figure.h  king.cpp  king.h  king.impl  knight.cpp  knight.h  knight.impl  line.h  line.impl  macro.h  pawn.cpp  pawn.h  pseudo_moves.cpp  pseudo_moves.h  queen.cpp  queen.h  rook.cpp  rook.h
settings/: recorder.cpp  recorder.h  recorder_stream.cpp  recorder_stream.h  settings.cpp  settings.h
tests/: tests.cpp  tests.h
ui/: storage.cpp  storage.h  ui.cpp  ui.h
